Add languages list to mini-user-profile
